--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation 'org.projectlombok:lombok'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+    implementation 'org.modelmapper:modelmapper:2.3.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
